--- a/css/imagesstyles.css
+++ b/css/imagesstyles.css
@@ -4,6 +4,7 @@ html,body{
   height: auto;
   font-family: 'PT Sans', sans-serif;
   background-color: #F2DD86;
+  background-image: url("https://i.imgur.com/IoahU4K.jpg");
 }
 a{
   text-decoration:none
@@ -23,11 +24,54 @@ a{
 .logo{
   justify:center;
   position: relative;
-  left: -90px;
+  left: -40px;
+  right: auto;
   margin:auto;
-  margin-top: 5px;
+  width:auto;
+  /* margin-top: 5px; */
   align-items: center;
 }
+/* navbar */
+.chee{
+  width:100%;
+  height:40px;
+}
+.chee nav {
+  width:100%;
+  height:40px;
+  background:#eee;
+  opacity: 75%;
+  display:block;
+  top:0;
+  transition:all ease-in-out 0.4s;
+  box-shadow:0 0 20px #bbb;
+}
+.chee ul {width:100% !important;
+  min-width:500px;
+  max-width:960px;
+  margin:0 auto;
+}
+.chee li{ float:left;
+  list-style:none;
+  font-family: 'Arial';
+  width:19%;
+  color:#545454;
+  padding: 13px 0;
+  letter-spacing:0.2em;
+  font-weight:200;
+  font-size:0.8em;
+  text-align:center;
+  transition:all 0.2s ease;
+}
+.chee a{
+  color:#545454;
+}
+
+.chee a:hover{color:#4f9cd6; cursor:pointer;}
+.chee li:hover{color:#4f9cd6; cursor:pointer;}
+
+/* end of nav */
+
 .text{
   position:relative;
   overflow:hidden;
@@ -80,6 +124,7 @@ a{
 	width: 100%;
 	height: 100%;
 	background-color: #000;
+  padding:0px 0px;
 	content: '';
 	color: white;
 	opacity: 0.4;
@@ -177,7 +222,7 @@ a{
 }
 
 /* menu button */
-.btn{
+/* .btn{
   color:#333;
   border:2px solid;
   border-radius:3px;
@@ -243,7 +288,7 @@ a{
 .dropdown:hover .dropbtn {
   background-color: #747575;
 	opacity: 0.5;
-}
+}*/
 .pointer{
   position: absolute;
   transform: translate(-50%, -50%);
