--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,13 @@
 */
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 html,body{
-  margin:0;
-  height:100%;
+  margin: 0;
+  height: auto;
   font-family: 'PT Sans', sans-serif;
 }
+
 a{
-  display:flex;
+    text-decoration:none
 }
 .header{
   position:relative;
@@ -80,6 +81,47 @@ a{
 .header a{
   color:#eee
 }
+/* navbar */
+.chee{
+  width:100%;
+  height:40px;
+  background-color: #F2DD86;
+}
+.chee nav {
+  width:100%;
+  height:40px;
+  background:#eee;
+  opacity: 75%;
+  display:block;
+  top:0;
+  transition:all ease-in-out 0.4s;
+  box-shadow:0 0 20px #bbb;
+}
+.chee ul {width:100% !important;
+  min-width:500px;
+  max-width:960px;
+  margin:0 auto;
+}
+.chee li{ float:left;
+  list-style:none;
+  font-family: 'Arial';
+  width:19%;
+  color:#545454;
+  padding: 13px 0;
+  letter-spacing:0.2em;
+  font-weight:200;
+  font-size:0.8em;
+  text-align:center;
+  transition:all 0.2s ease;
+}
+.chee a{
+  color:#545454;
+}
+
+.chee a:hover{color:#4f9cd6; cursor:pointer;}
+.chee li:hover{color:#4f9cd6; cursor:pointer;}
+
+/* end of nav */
 
 .sides, .info{
   flex: 0 0 auto;
@@ -96,16 +138,17 @@ a{
   50% { transform: scale(1.2) translateY(-400px)}
 }
 .content{
-  padding:5% 10%;
+  padding:3% 10%;
   text-align:justify;
   background-color: #F2DD86;
-	/* background-image: url("css/webbg.jpg"); */
+  background-image: url("https://i.imgur.com/IoahU4K.jpg");
 }
 /*video*/
 .contentv{
-  padding:5% 10%;
+  padding:3% 10%;
   text-align:center;
 	background-color: #F2DD86;
+  background-image: url("https://i.imgur.com/IoahU4K.jpg");
 }
 .frame {
   width: 100%;
@@ -113,7 +156,8 @@ a{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-top: 25px;
   margin-bottom: 25px;
-  padding: 20px;
+  padding: 30px;
+  color: #3b3b3b;
 }
 .container {
   overflow: hidden;
@@ -199,6 +243,149 @@ a{
   background-color: #747575;
 	opacity: 0.5;
 }
+
+/* Contact */
+#fcf-form {
+    display:block;
+}
+
+.fcf-body {
+    margin: 0;
+    font-family: -apple-system, Arial, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #3b3b3b;
+    text-align: left;
+    padding: 30px;
+    padding-bottom: 10px;
+    max-width: 100%;
+}
+
+.fcf-form-group {
+    margin-bottom: 1rem;
+}
+
+.fcf-input-group {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    width: 100%;
+}
+
+.fcf-form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #F2DD86;;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    outline: none;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.fcf-form-control:focus {
+    border: 1px solid #313131;
+}
+
+select.fcf-form-control[size], select.fcf-form-control[multiple] {
+    height: auto;
+}
+
+textarea.fcf-form-control {
+    font-family: 'PT Sans', sans-serif;
+    height: auto;
+}
+
+label.fcf-label {
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+
+.fcf-btn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .fcf-btn {
+        transition: none;
+    }
+}
+
+.fcf-btn:hover {
+    color: #212529;
+    text-decoration: none;
+}
+
+.fcf-btn:focus, .fcf-btn.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.fcf-btn-primary {
+    color: #fff;
+    background-color: #8EA8C3;
+}
+
+.fcf-btn-primary:hover {
+    color: #fff;
+    background-color: #8e9bc3;
+}
+
+.fcf-btn-primary:focus, .fcf-btn-primary.focus {
+    color: #fff;
+    background-color: #8EA8C3;
+    border-color: #0062cc;
+    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+}
+
+.fcf-btn-lg, .fcf-btn-group-lg>.fcf-btn {
+    padding: 0.5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: 0.3rem;
+}
+
+.fcf-btn-block {
+    display: block;
+    width: 100%;
+}
+
+.fcf-btn-block+.fcf-btn-block {
+    margin-top: 0.5rem;
+}
+
+input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[type="button"].fcf-btn-block {
+    width: 100%;
+}
+
+/* little bee friend */
 .pointer{
   position: absolute;
   transform: translate(-50%, -50%);
