--- a/css/video.css
+++ b/css/video.css
@@ -4,6 +4,7 @@ html,body{
   height: auto;
   font-family: 'Raleway', sans-serif;
   background-color: #F2DD86;
+  background-image: url("https://i.imgur.com/IoahU4K.jpg");
 }
 a{
   text-decoration:none
