--- a/css/styles.css
+++ b/css/styles.css
@@ -138,15 +138,15 @@ a{
 .content{
   padding:3% 15%;
   text-align:justify;
-  background-color: #F2DD86;
-  background-image: url("https://i.imgur.com/IoahU4K.jpg");
+  background-color: #f2e7b8;
+  /* background-image: url("https://i.imgur.com/IoahU4K.jpg"); */
 }
 /*video*/
 .contentv{
   padding:3% 15%;
   text-align:center;
-	background-color: #F2DD86;
-  background-image: url("https://i.imgur.com/IoahU4K.jpg");
+	background-color: #f2e7b8;
+  /* background-image: url("https://i.imgur.com/IoahU4K.jpg"); */
 }
 .frame {
   width: 100%;
