--- a/css/imagesstyles.css
+++ b/css/imagesstyles.css
@@ -4,7 +4,7 @@ html,body{
   height: auto;
   font-family: 'PT Sans', sans-serif;
   background-color: #f2e7b8;
-  /* background-image: url("https://i.imgur.com/IoahU4K.jpg"); */
+  background-image: url("https://i.imgur.com/s5s0dEV.png");
 }
 a{
   text-decoration:none
@@ -35,6 +35,7 @@ a{
 .chee{
   width:100%;
   height:40px;
+  background-color: #F2DD86;
 }
 .chee nav {
   width:100%;
@@ -48,13 +49,13 @@ a{
 }
 .chee ul {width:100% !important;
   min-width:500px;
-  max-width:960px;
+  max-width:860px;
   margin:0 auto;
 }
 .chee li{ float:left;
   list-style:none;
   font-family: 'Arial';
-  width:19%;
+  width:25%;
   color:#545454;
   padding: 13px 0;
   letter-spacing:0.2em;
